# agentforge

./: .gitignore  Agent Forge - Home.md  CLAUDE.md  ONBOARDING.md  README.md  agentforge-local-live-verification.md
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_sprint0_foundation.py  0002_sprint1_indexing.py  0003_sprint1_runtime.py  0004_eval_runs.py  0004_sprint1_eval_runs.py  0005_document_has_been_indexed.py  0005_eval_model_routing.py
apps/api/app/: __init__.py  main.py  seed_demo.py  seed_demo_rich.py
apps/api/app/core/: __init__.py  config.py  database.py  principal.py
apps/api/app/domain/: acl.py  citations.py  grounding.py  indexing.py  input_guard.py  language.py  model_routing.py  models.py  parsers.py  pii.py  schemas.py  vector.py
apps/api/app/infra/: audit.py  authz.py  model_gateway.py  object_store.py  qdrant_store.py  storage.py  (+1 more)
apps/api/tests/: test_acl_update_contracts.py  test_answerability_judge.py  test_audit_contracts.py  test_citation_validator_contracts.py  test_config.py  test_document_upload_contracts.py  test_embedding_gateway_contracts.py  test_eval_contracts.py  test_eval_runs.py  test_grounding.py  test_health.py  test_language.py  test_llm_gateway_contracts.py  test_metadata_contracts.py  test_model_gateway_contracts.py  test_object_store.py  test_parser_contracts.py  test_pii_masking.py  test_qdrant_store_contracts.py  test_reranker.py  test_runtime_contracts.py  test_seed_demo.py  test_vector_adapter_contracts.py  test_vector_store_factory.py
(+230 files in other folders)
